k8s/namespace.yml
kind: Namespace
apiVersion: v1
metadata:
  name: node-gke
  labels:
    name: node-gke
