k8s/app-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
  namespace: node-gke
spec:
  replicas: 1
  selector:
    matchLabels:
      component: api-server
  template:
    metadata:
      labels:
        component: api-server
    spec:
      containers:
        - name: react-gke-backend-container
          image: "gcr.io/react-gke-terraform/node-express-typescript-k8-gke"
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
