k8s/app-server-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-server-cluster-ip-service
  namespace: node-express-typescript
spec:
  type: ClusterIP
  selector:
    component: api-server
  ports:
    - port: 8080
      targetPort: 8080
